home work change
add answer to home work

--- a/homework.html
+++ b/homework.html
@@ -35,21 +35,23 @@
       </ol>  
     <h2>Answer</h2>
     <ol>
-        <li>הוא רצף של תווים במבנה אחיד המשמש לייצוג המיקום של דפי אינטרנט וקבצים ברשת האינטרנט</li>
-        <li>What is a query string?</li>
-        <li>What is an internet protocol? Can you name a few?</li>
-        <li>What does HTTP stands for?</li>
-        <li>What is the difference between HTTP and HTTPS?</li>
-        <li>What is an IP address?</li>
-        <li>What are DNS servers?</li>
-        <li>What is a web client? What is a web server? What is the difference between the two?</li>
-        <li>What does HTML stands for?</li>
-        <li>What does CSS stands for?</li>
+        <li>its a web adress ,It's like an address in the warehouse found in the goods  </li>
+        <li>This is a sequence of characters that directs us to where to access the server, as in the previous example the url consists of a sequence of characters that directs us to which avenue in the warehouse to access and on which shelf is the goods in our case this site or any other file on a server</li>
+        <li>This protocol is a unified language that lets us define what to send or receive for example if we access a media file or image or send just text <br> IP: Internet Protocol <br> FTP: File Transfer Protocol <br> SMTP: Simple Mail Transfer Protocol <br>HTTPS: Hypertext Transfer Protocol Secure</li>
+        <li>http This is a protocol which tells us that we are accessing the site</li>
+        <li>This is the same as in the previous question The only difference is it shows us that the site is secure</li>
+        <li>ip This is a fixed-length address that gives us access to an endpoint. This can be a home network computer or a printer located on one of the servers worldwide</li>
+        <li>The dns address is like a warehouse keeper that knows how to get an ip address and directs us to the same warehouse where we are looking for the product</li>
+        <li>web server This processing and provisioning of a web page to the client is the primary duty of a web server.
+            web client This is an application installed by the client on the computer who can talk to the server and translate all the information it receives</li>
+        <li>html is designed to build the body of the site just like in an office presentation to build the presentation structure</li>
+        <li>css is designed to shape the visibility of the site from what we mentioned in a previous answer on the Office presentation</li>
         <li>Generally speaking, what is the responsibility of each one of the following technologies:</li>
-        <li>HTML, CSS and Javascript.</li>
-        <li>What are the following - V8, SpiderMonkey & JavascriptCore ?</li>
+        <li>With the help of the three software we can build an interactive and dynamic site js gives us the ability to make the site more animated and dynamic</li>
+        <li>v8 This is the js system developed by Google
+            monkey This is a system of Mozilla Fox</li>
         <li>Which one of them belongs to which browser?</li>
-        <li>What did HTML5 bring to the table?</li>
+        <li>html 5 comes with new developments and site building At the same time to make developers simpler life in site building for different platforms</li>
       </ol>  
 </body>
 </html>
